# fastGRFF

./: LICENSE  pyproject.toml
cuda/: fastGRFF.cu  gpugrff.cu  grff_device.cuh  grff_tables.cuh
fastGRFF/: __init__.py  core.py
python/: grff_gpu.py
